# alphago-gymnasium-pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PAPER_FIDELITY.md  TEST_PLAN.md
notebooks/: alphago_2016_tutorial.ipynb  alphago_2016_tutorial.py
references/: README.md  fetch_paper.py
scripts/: scan_notebook.py  validate_colab_t4.sh  validate_notebook.py
src/alphago_gym/: __init__.py  data.py  device.py  env.py  go.py  mcts.py  models.py  training.py  visualization.py
tests/: test_data.py  test_device.py  test_env.py  test_go.py  test_mcts.py  test_models.py  test_notebook_artifact.py  test_references.py  test_training.py  test_visualization.py
